xLib6000 Change Log

v2.1.1

Panadapter.swift - commented out xPixel & yPixel code in parseProperties(_:)
Meter.swift - corrected log message in streamHandler(_:)
SliceCommands.swift - corrected error in "@objc dynamic public var audioPan: Int"
Radio.swift - refactored vitaParser(_:) to eliminate unwrapped optional error on shutdown


v2.1.0

refactored the Api state machine, eliminated setConnectionState()
UdpManager.swift - commented out "ping" code in register(clientHandle:)
Panadapter.swift - renamed streamActive to isStreaming
Waterfall.swift - renamed streamActive to isStreaming
Opus.swift - added public var isStreaming
Panadapter.swift - added detection of out-of-sequence packets
Waterfall.swift - added detection of out-of-sequence packets
Meter.swift - in parseProperties(_:) added '&& number != "" && units != ""' to if !_initialized
TcpManager.swift - correction to connect(radioParameters:isWan:)
Api.swift - in tcpState(connected:host:port:error:) added guard for udp.bind success
Api.swift - corrections to shutdown / disconnect processing
UdpManager.swift - in bind(radioParameters:isWan:clientHandle:) added Bool return value

v2.0.6

WanServer.swift - changed hostName & hostPort to constants
WanServer.swift - reworked log messages and comments
Radio.swift - commented out code in defaultReplyHandler(_:seqNum:responseValue:reply:) until v2.4.9 bugs fixed
Radio.swift - refactored removeAll()
Panadapter.swift - added public var streamActive
Waterfall.swift - added public var streamActive
Radio.swift - added use of streamActive to vitaParser(_:)

v2.0.5

Radio.swift - corrections to defaultReplyHandler(_:seqNum:responseValue:reply:)
FlexErrors.swift - corrected text for .SL_I_CWX_NOTHING_TO_ERASE
Api.swift - in setConnectionState(_:) made disconnect dependent on _isGui

v2.0.4

RadioParameters.swift - refactored (simplification)
WanServer.swift - added a "FIXME:" in socketDidDisconnect(_:withError:)